tweaked display of map on mobile, and prevent ios double-take of alt state

--- a/deploy/public/includes/css/style.css
+++ b/deploy/public/includes/css/style.css
@@ -977,10 +977,17 @@
       }
 
     /* contacts */
+      #map-wrap {
+        width: 90%;
+        margin:0 auto;
+        text-align: center;
+      }
+
       #gmap {
         width: 100%;
         height: 200px;
-        margin-top:0;
+        margin:0 auto;
+        text-align: center;
       }
 
     /* footer */
